enforce getListener on infusion types, clean-up